--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,18 @@
         <targetModelPackage>com.jdwl.domain</targetModelPackage>
         <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
         <targetXMLPackage>mappers</targetXMLPackage>
+
+        <dev.version>V2.0</dev.version>
     </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>${tk.mybatis.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -44,7 +55,7 @@
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.2</version>
                 <configuration>
-                    <configurationFile>dev-tools/mybatis-generator.xml</configurationFile>
+                    <configurationFile>dev-tools/mybatis-generator-${dev.version}.xml</configurationFile>
                     <overwrite>true</overwrite>
                     <verbose>true</verbose>
                 </configuration>
@@ -58,6 +69,11 @@
                         <groupId>org.mybatis.generator</groupId>
                         <artifactId>mybatis-generator-core</artifactId>
                         <version>1.3.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>${tk.mybatis.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
