--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jdwl.dev</groupId>
+    <groupId>com.netyou.dev</groupId>
     <artifactId>dev-util</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
-            <id>libs-releases</id>
-            <name>libs-releases</name>
-            <url>http://artifactory.jd.com/libs-releases</url>
-        </repository>
-        <repository>
-            <id>libs-snapshots</id>
-            <name>libs-snapshots</name>
-            <url>http://artifactory.jd.com/libs-snapshots</url>
+            <id>public</id>
+            <name>Public Repositories</name>
+            <url>http://central.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -32,8 +33,8 @@
 
         <!--  MyBatis Generator  -->
         <targetJavaProject>${basedir}/src/main/java</targetJavaProject>
-        <targetMapperPackage>com.jdwl.dao</targetMapperPackage>
-        <targetModelPackage>com.jdwl.domain</targetModelPackage>
+        <targetMapperPackage>com.netyou.dev.dao</targetMapperPackage>
+        <targetModelPackage>com.netyou.dev.domain</targetModelPackage>
         <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
         <targetXMLPackage>mappers</targetXMLPackage>
 
