--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -2,4 +2,4 @@
 jdbc.username=root
 jdbc.password=123456
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.102.185:3358/las_dev?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/passport?characterEncoding=UTF-8
